--- a/helloForm/app.yaml
+++ b/helloForm/app.yaml
@@ -1,11 +1,16 @@
+application: webirctracker
+version: 1
 runtime: python27
 api_version: 1
 threadsafe: true
 
 handlers:
+- url: /style\.css
+  static_files: style.css
+  upload: style\.css
 - url: /.*
   script: main.app
-
+  
 libraries:
 - name: webapp2
   version: latest
