--- a/stockPortfolio/app.yaml
+++ b/stockPortfolio/app.yaml
@@ -1,4 +1,4 @@
-application: webirctracker
+application: assignment3
 version: 1
 runtime: python27
 api_version: 1
@@ -7,9 +7,7 @@ threadsafe: true
 handlers:
 - url: /.*
   script: main.app
-  
+
 libraries:
 - name: webapp2
-  version: latest
-- name: jinja2
   version: latest
